[package]
name = "meadowlark"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
clap = { version = "4.4.17", features = ["derive"] }
lark-vm = { path = "../lark-vm" }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"
